# fundvid

./: .cproject  .gitignore  .project  CMakeLists.txt  CMakeLists.txt~  Doxyfile.in  Doxyfile.in~  Doxyfile~  LICENSE  README.md
example/: default_config.cfg
example/data/: gt3-4m.xml  log.txt  log.txt~
html/: CMakeCCompilerId_8c.html  CMakeCXXCompilerId_8cpp.html  Failure_8cpp.html  Failure_8cpp__incl.dot  Failure_8cpp__incl.md5  Failure_8h.html  Failure_8h__dep__incl.dot  Failure_8h__dep__incl.md5  Failure_8h__incl.dot  Failure_8h__incl.md5  Failure_8h_source.html  LWImage_8cpp.html  LWImage_8cpp__dep__incl.dot  LWImage_8cpp__dep__incl.md5  LWImage_8h.html  LWImage_8h__dep__incl.dot  LWImage_8h__dep__incl.md5  LWImage_8h__incl.dot  LWImage_8h__incl.md5  LWImage_8h_source.html  README_8md.html  Rect_8cpp.html  Rect_8cpp__incl.dot  Rect_8cpp__incl.md5  Rect_8hpp.html  Rect_8hpp__dep__incl.dot  Rect_8hpp__dep__incl.md5  Rect_8hpp__incl.dot  Rect_8hpp__incl.md5  Rect_8hpp_source.html  SimpleString_8cpp.html  SimpleString_8cpp__incl.dot  SimpleString_8cpp__incl.md5  SimpleString_8h.html  SimpleString_8h__dep__incl.dot  SimpleString_8h__dep__incl.md5  SimpleString_8h__incl.dot  SimpleString_8h__incl.md5  SimpleString_8h_source.html  TestHarness_8h.html  (+1844 more)
html/search/: all_0.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  (+136 more)
latex/: CMakeCCompilerId_8c.tex  CMakeCXXCompilerId_8cpp.tex  Failure_8cpp.tex  Failure_8cpp__incl.dot  Failure_8cpp__incl.md5  Failure_8h.tex  Failure_8h__dep__incl.dot  Failure_8h__dep__incl.md5  Failure_8h__incl.dot  Failure_8h__incl.md5  LWImage_8cpp.tex  LWImage_8cpp__dep__incl.dot  LWImage_8cpp__dep__incl.md5  LWImage_8h.tex  LWImage_8h__dep__incl.dot  LWImage_8h__dep__incl.md5  LWImage_8h__incl.dot  LWImage_8h__incl.md5  Rect_8cpp.tex  Rect_8cpp__incl.dot  Rect_8cpp__incl.md5  Rect_8hpp.tex  Rect_8hpp__dep__incl.dot  Rect_8hpp__dep__incl.md5  Rect_8hpp__incl.dot  Rect_8hpp__incl.md5  SimpleString_8cpp.tex  SimpleString_8cpp__incl.dot  SimpleString_8cpp__incl.md5  SimpleString_8h.tex  SimpleString_8h__dep__incl.dot  SimpleString_8h__dep__incl.md5  SimpleString_8h__incl.dot  SimpleString_8h__incl.md5  TestHarness_8h.tex  TestHarness_8h__dep__incl.dot  TestHarness_8h__dep__incl.md5  TestHarness_8h__incl.dot  TestHarness_8h__incl.md5  TestRegistry_8cpp.tex  (+1136 more)
src/: fundamentalmat_solver.cpp  fundamentalmat_solver.h  main.cpp
src/density_estimator/: density_estimator.h  kernel_density_estimator.cpp  kernel_density_estimator.h
src/estimation/: abstract_estimator.h  f_uncertainty.cpp  f_uncertainty.h  fundmat_optimizer.h  lm_fundmat_optimizer.cpp  lm_fundmat_optimizer.h  orsa_estimator.cpp  orsa_estimator.h
src/example/: default_config.cfg
src/exceptions/: estimation_error_exception.h  optimization_exception.cpp  optimization_exception.h
src/gt_annotation/: HowToUse.txt  gt0-3f_corr.xml  gt1-3s.xml  gt3-4mf_corr.xml  matchPointsXml.cc
src/kernels/: epanechnikov_kernel.cpp  epanechnikov_kernel.h  histogram_kernel.cpp  histogram_kernel.h  kernel.h
src/matchers/: abstract_matcher.h  sift_guided_matching.cpp  sift_guided_matching.h  sift_opencv_matcher.cpp  sift_opencv_matcher.h
src/reader/: boostreader.cpp  boostreader.h  frames_reader.h  imagesreader.cpp  imagesreader.h
src/sigma_functions/: sigma_function.h  sigma_sigmoid_function.cpp  sigma_sigmoid_function.h  sigma_step_function.cpp  sigma_step_function.h
src/test/: density_map_test.cpp  density_test.cpp
